--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,8 +1,16 @@
 // Widescreens
-@include mediaXl {}
+@include mediaXl {
+    .projects {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
 
 // Desktops & Laptops
-@include mediaLg {}
+@include mediaLg {
+    .projects {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
 
 // Tablets & Small Laptops
 @include mediaMd {
@@ -40,6 +48,31 @@
     .about-info {
         grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
         grid-template-columns: 1fr;
+        .bio {
+            grid-area: bio;
+            font-size: 1.5rem;
+        }
+        .bioimage {
+            grid-area: bioimage;
+            font-size: 1.5rem;
+        }
+        .job-1 {
+            grid-area: job1;
+        }
+        .job-2 {
+            grid-area: job2;
+        }
+        .job-3 {
+            grid-area: job3;
+        }
+        .job {
+            background: lighten($primary-color, 5);
+            padding: 0.5rem;
+            border-bottom: $secondary-color 5px solid;
+        }
+    }
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -47,5 +80,8 @@
 @include mediaSm {
     main#home h1 {
         margin-top: 10vh;
+    }
+    .projects {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
